# edger-idf

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  edger-idf.code-workspace  edger_test.eez-project
components/edger-idf-common/: CMakeLists.txt  MotorController.cpp  MotorController.hpp  idf_component.yml
edger-idf-main/: CMakeLists.txt  README.md  edger_test.eez-project-ui-state
edger-idf-main/main/: ArousalMonitor.cpp  ArousalMonitor.hpp  CMakeLists.txt  EdgingController.cpp  EdgingController.hpp  RotaryEncoderWithButton.hpp  WithMutex.hpp  main.cpp
edger-idf-main/main/ui/: ArousalPage.hpp  GraphPage.cpp  Page.hpp  PagesManager.hpp  SettingsPage.hpp  tamzen_12.c  view.cpp  view.hpp
edger-idf-main/main/ui/eez_ui/: actions.h  images.h  screens.h  styles.h
edger-idf-motor-control/: CMakeLists.txt
edger-idf-motor-control/main/: CMakeLists.txt  idf_component.yml  main.cpp  xiao_esp32c6_util.hpp
main/: ArousalMonitor.cpp  ArousalMonitor.hpp  Button.cpp  CMakeLists.txt  DashboardPage.hpp  EdgingController.cpp  EdgingController.hpp  GraphPage.cpp  GraphPage.hpp  MotorController.cpp  MotorController.hpp  Page.hpp  RingBuffer.hpp  Rotary.cpp  Rotary.h  Rotary.hpp  actions.c  idf_component.yml  macroUtil.hpp  main.cpp  util.h  view.hpp
main/device/: ADS1115.cpp  ADS1115.hpp  Button.hpp  Rotary.cpp  Rotary.hpp  RotaryEncoderWithButton.hpp
main/eez_ui/: actions.h  fonts.h  styles.c  styles.h  ui.c  ui_font_tamzen_12.c
main/ui/: ArousalPage.hpp  ArousalPageEEZ.hpp  DashboardPage.hpp  DashboardPageEEZ.hpp  GraphPage.cpp  GraphPage.hpp  GraphPageEEZ.cpp  GraphPageEEZ.hpp  Page.hpp  PageConcept.hpp  PagesManager.hpp  PressurePage.hpp  PressurePageEEZ.hpp  SettingsPage.hpp  SettingsPageEEZ.hpp  actions.c  actions.cpp  page_change.cpp  page_change.hpp  ui_extra.h  view.cpp  view.hpp
main/ui/eez_ui/: screens.c  screens.h  styles.c  styles.h
